--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,43 @@
-rc-cpq-utils/.husky/pre-commit
-rc-cpq-utils/.vscode/extensions.json
-rc-cpq-utils/.vscode/launch.json
-rc-cpq-utils/.vscode/settings.json
-rc-cpq-utils/.prettierignore
-rc-cpq-utils/.prettierrc
-rc-cpq-utils/jest.config.js
+# This file is used for Git repositories to specify intentionally untracked files that Git should ignore. 
+# If you are not using git, you can delete this file. For more information see: https://git-scm.com/docs/gitignore
+# For useful gitignore templates see: https://github.com/github/gitignore
+
+# Salesforce cache
+.sf/
+.sfdx/
+
+.localdevserver/
+deploy-options.json
+
+# LWC VSCode autocomplete
+**/lwc/jsconfig.json
+
+# LWC Jest coverage reports
+coverage/
+
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Dependency directories
+node_modules/
+
+# Eslint cache
+.eslintcache
+
+# MacOS system files
+.DS_Store
+
+# Windows system files
+Thumbs.db
+ehthumbs.db
+[Dd]esktop.ini
+$RECYCLE.BIN/
+
+# Local environment variables
+.env
+.vscode/
+.husky/
